# cmake-rants

./: .gitmodules  README.md
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt  app1.cpp
apps/app2/: CMakeLists.txt  app2.cpp
libsticazzi/: CMakeLists.txt
libsticazzi/cmake/: SticazziConfig.cmake.in
libsticazzi/include/: sticazzi.h
libsticazzi/src/: sticazzi.cpp
